// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic Hello, world! 1`] = `
{
  "encodedData": [
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
  ],
  "encodingTable": {
    " ": [
      1,
      0,
      1,
      1,
    ],
    "!": [
      1,
      1,
      1,
      1,
    ],
    ",": [
      0,
      0,
      1,
    ],
    "H": [
      1,
      1,
      1,
      0,
    ],
    "d": [
      1,
      0,
      0,
      0,
    ],
    "e": [
      1,
      0,
      0,
      1,
    ],
    "l": [
      0,
      1,
    ],
    "o": [
      1,
      1,
      0,
    ],
    "r": [
      0,
      0,
      0,
    ],
    "w": [
      1,
      0,
      1,
      0,
    ],
  },
  "tree": {
    "left": {
      "left": {
        "left": {
          "value": "r",
        },
        "right": {
          "value": ",",
        },
      },
      "right": {
        "value": "l",
      },
    },
    "right": {
      "left": {
        "left": {
          "left": {
            "value": "d",
          },
          "right": {
            "value": "e",
          },
        },
        "right": {
          "left": {
            "value": "w",
          },
          "right": {
            "value": " ",
          },
        },
      },
      "right": {
        "left": {
          "value": "o",
        },
        "right": {
          "left": {
            "value": "H",
          },
          "right": {
            "value": "!",
          },
        },
      },
    },
  },
}
`;

exports[`basic Hello, world! 2`] = `
Uint8Array [
  2,
  233,
  92,
  110,
  176,
  99,
  3,
]
`;

exports[`basic Hello, world!1 1`] = `
{
  "encodedData": [
    1,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    0,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
  ],
  "encodingTable": {
    " ": [
      0,
      1,
      0,
    ],
    "!": [
      1,
      0,
      1,
      1,
    ],
    ",": [
      0,
      1,
      1,
      1,
    ],
    "1": [
      1,
      0,
      1,
      0,
    ],
    "H": [
      1,
      0,
      0,
      0,
    ],
    "d": [
      1,
      1,
      1,
      1,
    ],
    "e": [
      0,
      1,
      1,
      0,
    ],
    "l": [
      0,
      0,
    ],
    "o": [
      1,
      1,
      0,
    ],
    "r": [
      1,
      1,
      1,
      0,
    ],
    "w": [
      1,
      0,
      0,
      1,
    ],
  },
  "tree": {
    "left": {
      "left": {
        "value": "l",
      },
      "right": {
        "left": {
          "value": " ",
        },
        "right": {
          "left": {
            "value": "e",
          },
          "right": {
            "value": ",",
          },
        },
      },
    },
    "right": {
      "left": {
        "left": {
          "left": {
            "value": "H",
          },
          "right": {
            "value": "w",
          },
        },
        "right": {
          "left": {
            "value": "1",
          },
          "right": {
            "value": "!",
          },
        },
      },
      "right": {
        "left": {
          "value": "o",
        },
        "right": {
          "left": {
            "value": "r",
          },
          "right": {
            "value": "d",
          },
        },
      },
    },
  },
}
`;

exports[`basic Hello, world!1 2`] = `
Uint8Array [
  7,
  134,
  12,
  234,
  119,
  31,
  58,
]
`;

exports[`basic Hello, world!11 1`] = `
{
  "encodedData": [
    0,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    0,
    1,
    1,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    1,
    0,
  ],
  "encodingTable": {
    " ": [
      1,
      1,
      1,
      1,
    ],
    "!": [
      0,
      1,
      0,
      1,
    ],
    ",": [
      1,
      1,
      1,
      0,
    ],
    "1": [
      1,
      1,
      0,
    ],
    "H": [
      0,
      1,
      0,
      0,
    ],
    "d": [
      0,
      1,
      1,
      0,
    ],
    "e": [
      0,
      1,
      1,
      1,
    ],
    "l": [
      0,
      0,
    ],
    "o": [
      1,
      0,
      1,
    ],
    "r": [
      1,
      0,
      0,
      1,
    ],
    "w": [
      1,
      0,
      0,
      0,
    ],
  },
  "tree": {
    "left": {
      "left": {
        "value": "l",
      },
      "right": {
        "left": {
          "left": {
            "value": "H",
          },
          "right": {
            "value": "!",
          },
        },
        "right": {
          "left": {
            "value": "d",
          },
          "right": {
            "value": "e",
          },
        },
      },
    },
    "right": {
      "left": {
        "left": {
          "left": {
            "value": "w",
          },
          "right": {
            "value": "r",
          },
        },
        "right": {
          "value": "o",
        },
      },
      "right": {
        "left": {
          "value": "1",
        },
        "right": {
          "left": {
            "value": ",",
          },
          "right": {
            "value": " ",
          },
        },
      },
    },
  },
}
`;

exports[`basic Hello, world!11 2`] = `
Uint8Array [
  2,
  71,
  11,
  223,
  22,
  70,
  93,
  2,
]
`;

exports[`basic Hello, world!111 1`] = `
{
  "encodedData": [
    0,
    1,
    1,
    0,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "encodingTable": {
    " ": [
      1,
      0,
      1,
      1,
    ],
    "!": [
      0,
      1,
      1,
      1,
    ],
    ",": [
      1,
      0,
      1,
      0,
    ],
    "1": [
      0,
      0,
    ],
    "H": [
      0,
      1,
      1,
      0,
    ],
    "d": [
      1,
      1,
      0,
      0,
    ],
    "e": [
      1,
      1,
      0,
      1,
    ],
    "l": [
      1,
      1,
      1,
    ],
    "o": [
      1,
      0,
      0,
    ],
    "r": [
      0,
      1,
      0,
      1,
    ],
    "w": [
      0,
      1,
      0,
      0,
    ],
  },
  "tree": {
    "left": {
      "left": {
        "value": "1",
      },
      "right": {
        "left": {
          "left": {
            "value": "w",
          },
          "right": {
            "value": "r",
          },
        },
        "right": {
          "left": {
            "value": "H",
          },
          "right": {
            "value": "!",
          },
        },
      },
    },
    "right": {
      "left": {
        "left": {
          "value": "o",
        },
        "right": {
          "left": {
            "value": ",",
          },
          "right": {
            "value": " ",
          },
        },
      },
      "right": {
        "left": {
          "left": {
            "value": "d",
          },
          "right": {
            "value": "e",
          },
        },
        "right": {
          "value": "l",
        },
      },
    },
  },
}
`;

exports[`basic Hello, world!111 2`] = `
Uint8Array [
  5,
  109,
  254,
  85,
  164,
  95,
  142,
  0,
]
`;

exports[`basic empty 1`] = `
{
  "encodedData": [],
  "encodingTable": {},
  "tree": {},
}
`;

exports[`basic empty 2`] = `
Uint8Array [
  0,
]
`;

exports[`basic 中文 1`] = `
{
  "encodedData": [
    0,
    1,
  ],
  "encodingTable": {
    "中": [
      0,
    ],
    "文": [
      1,
    ],
  },
  "tree": {
    "left": {
      "value": "中",
    },
    "right": {
      "value": "文",
    },
  },
}
`;

exports[`basic 中文 2`] = `
Uint8Array [
  2,
  1,
]
`;
